# opnsense-ansible

./: .gitignore  CLAUDE.md  UNIMPLEMENTED.md  galaxy.yml  pyproject.toml
.github/workflows/: workflow.yaml
plugins/module_utils/: opnsense.py
plugins/modules/: opnsense_captiveportal_zone.py  opnsense_core_tunable.py  opnsense_cron_job.py  opnsense_dhcrelay_destination.py  opnsense_dhcrelay_relay.py  opnsense_dnsmasq_domain.py  opnsense_dnsmasq_host.py  opnsense_firewall_alias.py  opnsense_firewall_category.py  opnsense_firewall_dnat_rule.py  opnsense_firewall_filter_rule.py  opnsense_firewall_npt_rule.py  opnsense_firewall_one_to_one_rule.py  opnsense_firewall_snat_rule.py  opnsense_ids_policy.py  opnsense_ids_user_rule.py  opnsense_ipsec_child.py  opnsense_ipsec_connection.py  opnsense_ipsec_local.py  opnsense_ipsec_pool.py  opnsense_ipsec_remote.py  opnsense_kea_v4_peer.py  opnsense_kea_v4_reservation.py  opnsense_kea_v4_subnet.py  opnsense_monit_alert.py  opnsense_monit_service.py  opnsense_monit_test.py  opnsense_openvpn_instance.py  opnsense_openvpn_overwrite.py  opnsense_radvd_entry.py  opnsense_route.py  opnsense_routing_gateway.py  opnsense_syslog_destination.py  opnsense_trafficshaper_pipe.py  opnsense_trafficshaper_queue.py  opnsense_trafficshaper_rule.py  opnsense_unbound_acl.py  opnsense_unbound_dnsbl.py  opnsense_unbound_forward.py  opnsense_unbound_host_alias.py  (+4 more)
tests/unit/plugins/modules/: conftest.py  test_opnsense_captiveportal_zone.py  test_opnsense_core_tunable.py  test_opnsense_cron_job.py  test_opnsense_dhcrelay_destination.py  (+40 more)
